--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
+        <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <title>English School</title>
         <link rel="stylesheet" type="text/css" href="reset.css" />
         <link rel="stylesheet" type="text/css" href="styles.css" />
@@ -13,27 +14,29 @@
 
     <body>
         <div class="home">
-            <div class="section">
-                <header class="header">
-                    <div class="logo">
-                        <img src="landing-materials/logo.svg" id="header_logo"/>
+            <div class="opacity">
+                <div class="section">
+                    <header class="header">
+                        <div class="logo">
+                            <img src="landing-materials/logo.svg" id="header_logo"/>
+                        </div>
+                        <div class="navigation">
+                            <a href="#subscription-link">Стоимость</a>
+                            <a href="#reviews-link">Отзывы</a>
+                        </div>
+                        <div class="mobile">
+                            <i class="fa-solid fa-phone home_icon"></i>
+                            <p class="mobile-number">+7 (123) 456-78-90</p>
+                        </div>
+                        </header>
+                    <div>
+                        <h1 class="home_title margin-bottom-detail">Лучший способ заговорить на английском</h1>
+                        <p class="text home_text margin-bottom-detail">Занимайся онлайн в удобное время в любом месте! 
+                        Запишитесь на бесплатный пробный урок уже сегодня.</p>
+                        <button class="button">Записаться на пробный урок</button>
                     </div>
-                    <div class="navigation">
-                        <a href="#subscription-link">Стоимость</a>
-                        <a href="#reviews-link">Отзывы</a>
-                    </div>
-                    <div class="mobile">
-                        <i class="fa-solid fa-phone home_icon"></i>
-                        <p class="mobile-number">+7 (123) 456-78-90</p>
-                    </div>
-                    </header>
-                <div>
-                    <h1 class="home_title">Лучший способ заговорить на английском</h1>
-                    <p class="text home_text">Занимайся онлайн в удобное время в любом месте! 
-                    Запишитесь на бесплатный пробный урок уже сегодня.</p>
-                    <button class="button">Записаться на пробный урок</button>
                 </div>
-            </div>    
+            </div>  
         </div>
 
         <div class="content">
@@ -57,7 +60,7 @@
                     </div>
                 </div>    
 
-                <div class="main-task">
+                <div class="main-task margin-bottom-detail">
                     <div class="main-task_content">
                         <h3 class="main-task_title">Мы научим говорить уверенно!<h3>
                         <p class="main-task_text">Мы считаем, что главная задача языка - помочь нам общаться друг с другом. 
