Адаптивная верстка (полупрозрачный контейнер)

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <body>
         <div class="home">
-            <div class="opacity">
+            <div class="opacity-container">
                 <div class="section">
                     <header class="header">
                         <div class="logo">
